# pypi-package-template

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/app/: __init__.py  model_config.py
src/app/inference/: infer.py
src/app/utils/: download_config.py  functions.py
