[metadata]
name = PACKAGE_NAME
version = attr: app.VERSION
author = Motahar Mahtab (GigaTech)
description = DESCRIPTION
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
python_requires = >=3.8
install_requires =
    torch >=1.13.0,<=1.13.1
    transformers[sentencepiece]==4.28.1
    PyYAML>=5.2
    datasets>=2.11.0
    segtok>=1.5.11
    gdown>=4.7.1

[options.packages.find]
where=src